Composer psr-0 fix.

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     },
     "autoload": {
         "psr-0": {
-            "Color": "src"
+            "Color": "src",
+            "Image": "src"
         }
     }
 }
